--- a/ejs-challenge/package.json
+++ b/ejs-challenge/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "lodash": "^4.17.21"
   }
 }
