--- a/Secrets-Authentication-Module-Project/package.json
+++ b/Secrets-Authentication-Module-Project/package.json
@@ -9,6 +9,7 @@
   "author": "James Leakos",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
